Implement immutable builder pattern for AppConfig and enhance file processing with exclusions